# am-projeto-recomendacao

./: .gitignore  README.md  pyproject.toml
01-introducao/: README.md  main.py  pyproject.toml
01-introducao/notebook/: pyproject.toml  teste_exemplos.ipynb
02-perceptron/: README.md  main.py  pyproject.toml
02-perceptron/notebooks/: dilema_da_festa.ipynb  testes.ipynb  testes_perceptron.ipynb
02-perceptron/src/: main.py
02-perceptron/src/api/v1/: recommendation.py  router.py
02-perceptron/src/models/: perceptron.py  perceptron_numpy.py
02-perceptron/src/schemas/: schemas.py
atv1-t1-perceptron-manual/: main.py  pyproject.toml
atv1-t1-perceptron-manual/notebooks/: perceptron_re.ipynb
notebooks/: 01_intro_dados.ipynb  02_testes.ipynb  03_perceptron_numpy.ipynb
revisao/revisao_perceptron/: pyproject.toml
revisao/revisao_perceptron/notebook/: perceptron.py  revisao_perceptron.ipynb
revisao/revisao_perceptron/src/: perceptron.py  perceptron_numpy.py  revisao_ciclo_dados.ipynb  revisao_fit_transform.ipynb  revisao_onehot_scaler.ipynb  revisão_perceptron_numpy.ipynb
revisao/revisao_perceptron/src/models/: revisao_mlp.ipynb
src/: main.py  schemas.py
src/api/v1/: router.py
src/models/: percepton_numpy.py  perceptron.py
