[project]
name = "atv1-t1-perceptron-manual"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.135.3",
    "matplotlib>=3.10.8",
    "pandas>=3.0.2",
    "pydantic>=2.12.5",
    "requests>=2.33.1",
    "tk>=0.1.0",
    "uvicorn>=0.44.0",
]
